# 2048_v1.0

./: CMakeLists.txt  README.md
app2048/: CMakeLists.txt  app2048.cpp  app2048.h
